# NiaAML-GUI

./: CITATION.cff  README.md  niaamlGUIoutput.ppln  niaamlGUIoutput.txt  pyproject.toml
.github/workflows/: test.yml
AppData/: io.github.firefly-cpp.niaaml_gui.desktop  io.github.lukapecnik.niaaml_gui.desktop  io.github.lukapecnik.niaaml_gui.metainfo.xml
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
niaaml_gui/: __init__.py  main.py  niaamlGUIoutput.ppln  niaamlGUIoutput.txt  process_window_data.py  progress_bar.py  styles.qss
niaaml_gui/utils/: pipeline_runner.py  run_pipeline_subprocess.py
niaaml_gui/widgets/: __init__.py  base_main_widget.py  connection_line.py  help_authors_widget.py  help_documentation_widget.py  help_license_widget.py  list_widget_custom.py  multi_selection_dialog.py  optimization_widget.py  pipeline_canvas.py  pipeline_controls.py  results_widget.py  sidebar.py  use_pipeline_widget.py
niaaml_gui/windows/: __init__.py  csv_editor_window.py  pipeline_canvas_window.py  process_window.py
niaaml_gui/windows/threads/: __init__.py  optimize_thread.py  pipeline_runner_thread.py  run_thread.py
tests/: test_niaaml_gui.py  test_pipeline.py  test_pipeline_canvas.py  test_pipeline_controls.py
