[tool.poetry]
name = "NiaAML-GUI"
version = "0.2.2"
description = "GUI for NiaAML Python package"
license = "MIT"
authors = ["Luka Pečnik <lukapecnik96@gmail.com>"]
keywords = ['classification', 'NiaPy', 'NiaAML', 'scikit-learn', 'nature-inspired algorithms', 'feature selection', 'preprocessing']
homepage = "https://github.com/lukapecnik/NiaAML-GUI"
repository = "https://github.com/lukapecnik/NiaAML-GUI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
niapy = "^2.0.5"
QtAwesome = "^1.2.3"
niaaml = "^1.2.0"
scikit-learn = "^1.3.2"
pyqt6 = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coveralls = "^3.3.1"
black = "^23.11.0"
autoflake = "^2.2.1"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
NiaAML-GUI = 'niaaml_gui.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
